--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/asd.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="/src/styles/main.css" />
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
     </div>
-    <img src="/asd.svg" />
+    <img src="/favicon.svg" />
     <script type="module" src="/src/scripts/main.js"></script>
   </body>
 </html>
